<resources>
    <string name="app_name">REST Application</string>

    <string name="copyright">Copyright@2020</string>
    <string name="welcome">Welcome!</string>
    <string name="nice">Nice to see you again!</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="need_help">Need Help?</string>
    <string name="hello">Hello There!</string>
    <string name="rest_in">Rest In</string>
    <string name="rest_out">Rest Out</string>
    <string name="report">Report</string>
    <string name="verify">Verify Rack</string>
    <string name="scan">Scan Barcode</string>
    <string name="scan_label">Scan Barcode Label</string>
    <string name="data">Your label data</string>
    <string name="data_wo">Your WO data</string>
    <string name="position">Your rack position</string>
    <string name="recommend">Recommendation Rack</string>
    <string name="wo_number">Scan WO barcode</string>
    <string name="label_number">Scan label barcode</string>
    <string name="rack_number">Scan rack barcode</string>
    <string name="verify_rack">Verify Rack</string>
    <string name="battery_type">Battery type</string>
    <string name="battery_name">Battery name</string>
    <string name="qty">Quantity (pcs)</string>
    <string name="qty_needed">Quantity needed (pcs)</string>
    <string name="alr_taken">Already taken (pcs)</string>
    <string name="pcs">pcs</string>
    <string name="stored">Summary</string>
    <string name="confirm">Confirm</string>
    <string name="rack_position">Rack position</string>
    <string name="success">Success</string>
    <string name="notification">Notification</string>
    <string name="find">Find</string>
    <string name="date_unload">Date Unloading</string>
    <string name="date_rest_in">Date Rest In</string>
    <string name="date_rest_out">Date Rest Out</string>
    <string name="pic_rest_in">PIC Rest In</string>
    <string name="pic_rest_out">PIC Rest Out</string>
    <string name="take">Take Out</string>
    <string name="confirm_ro">Confirmation Rest Out</string>
    <string name="nik">NIK</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="next">Next</string>
    <string name="chart">Rest In Chart</string>
</resources>
