<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/alternate_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/btnRestIn"
        android:layout_width="163dp"
        android:layout_height="53dp"
        android:background="@drawable/button_rest_in"
        android:drawableLeft="@drawable/wrap_forklift_left"
        android:fontFamily="@font/regular"
        android:text="@string/rest_in"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.139" />

    <Button
        android:id="@+id/btnRestOut"
        android:layout_width="163dp"
        android:layout_height="53dp"
        android:background="@drawable/button_rest_out"
        android:drawableRight="@drawable/wrap_forklift_right"
        android:fontFamily="@font/regular"
        android:text="@string/rest_out"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRestIn"
        app:layout_constraintVertical_bias="0.142" />

    <Button
        android:id="@+id/btnReport"
        android:layout_width="163dp"
        android:layout_height="53dp"
        android:background="@drawable/button_report"
        android:drawableLeft="@drawable/wrap_report_left"
        android:fontFamily="@font/regular"
        android:text="@string/report"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRestOut"
        app:layout_constraintVertical_bias="0.217" />

</androidx.constraintlayout.widget.ConstraintLayout>